tests/FSharp.Compiler.ComponentTests/Conformance/TypeForwarding/NegativeCases/Struct_NG_NormalStruct.fs
let nc = new NormalStruct()
let rv = nc.getValue()

exit rv
